--- a/index.html
+++ b/index.html
@@ -1,40 +1,33 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Beandipper.github.io : source-maps" />
 
-  <title>Beandipper.github.io</title>
-  <meta name="description" content="source-maps">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Beandipper.github.io</title>
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/beandipper">View on GitHub</a>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Beandipper.github.io</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">source-maps</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/beandipper" class="code">View Beandipper.github.io on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
+          <h1 id="project_title">Beandipper.github.io</h1>
+          <h2 id="project_tagline">source-maps</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
 <a name="testing-out-source-maps-with-clojurescript" class="anchor" href="#testing-out-source-maps-with-clojurescript"><span class="octicon octicon-link"></span></a>Testing out source-maps with clojurescript</h3>
 
 <p><img src="http://i.imgur.com/Lea1zjz.jpg?1" alt="Happy debugging!"></p>
@@ -103,26 +96,17 @@ Do a simple copy of your clojurescript directory structure like so:</p>
 <p>Now after enabling source-map debugging in your browser(see link in beginning) you should see be able to debug and set breakpoints in your clojurescript code from the browsers debugger.  </p>
 
 <p>Once again thanks to Sean Grove!. </p>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
 
-      <p><a href="https://github.com/beandipper" class="avatar"><img src="https://secure.gravatar.com/avatar/f72575e58192b43ba501b63076c2a7e4?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a>View <a href="https://github.com/beandipper">beandipper</a> on <a href="https://www.github.com">GitHub</a></p>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/beandipper/beandipper.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/beandipper/beandipper.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+    
 
-  
-</body>
+  </body>
 </html>
